--- a/JavaScript/Tutorial_22 (Project_1)/css/style.css
+++ b/JavaScript/Tutorial_22 (Project_1)/css/style.css
@@ -1,5 +1,6 @@
 /* .container-fluid {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items:;
+
 } */
